--- a/user/index.css
+++ b/user/index.css
@@ -76,7 +76,7 @@ header nav ul li a:hover {
 
 section {
     background-color: white;
-    min-height: 100vh;
+    min-height: 60vh;
 }
 
 section:nth-child(even) {
@@ -86,7 +86,6 @@ section:nth-child(even) {
 .tentang {
     padding: 1em;
     display: grid;
-    grid-template-columns: 60px 60px;
     gap: 10px 20px;
     align-items: center;
 }
@@ -98,7 +97,7 @@ section:nth-child(even) {
 }
 
 .tentang .image img {
-    width: 65%;
+    width: 55%;
 }
 
 .tentang .content {
@@ -139,14 +138,15 @@ section:nth-child(even) {
 }
 
 .heading {
-  display: flex;
+  display: block;
   flex-direction: column;
   text-align: center;
+  padding: 2rem;
 }
 
 .heading h3 {
     color: #FEA508;
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .heading h2 {
@@ -157,8 +157,10 @@ section:nth-child(even) {
 .card-container {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 25px 20px;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    gap: 25px;
+    padding-bottom: 2rem;
+    padding-inline: 2rem;
 }
 
 .card-container .card {
@@ -181,7 +183,7 @@ section:nth-child(even) {
 }
 
 .card-container .card img {
-    height: 100%;
+    height: 50%;
     width: 100%;
     border-radius: 0.5rem;
     object-fit: cover;
@@ -247,7 +249,7 @@ footer {
 
 footer .footer-content p {
     margin: 0;
-    font-weight: bold;
+    font-weight: 600;
     position: relative;
 }
  
@@ -270,6 +272,7 @@ footer .footer-content p {
     }
 
     .tentang {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1.5fr;
+        padding-right: 4rem;
     }
 }
