--- a/user/index.css
+++ b/user/index.css
@@ -176,16 +176,20 @@ section:nth-child(even) {
 }
 
 .card-container .card .image {
-    width: 100%;
-    height: 18rem;
+    width: 400px;
+    height: 500px;
     overflow: hidden;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
 }
 
 .card-container .card img {
-    height: 50%;
+    height: 100%;
     width: 100%;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     object-fit: cover;
 }
 
